# discord-bot

./: .env.example  .gitignore  Makefile  main.py  poetry.toml  pyproject.toml
src/: bot.py  commands.py  config.py  translator.py
